Move the Memory report cluster to bootui-engine over a MemoryRuntimeConfig SPI (Phase 0.5)
Extract MemoryReportProvider and its helpers (MemoryCalculator,
ContainerMemoryLimitDetector, MemoryKubernetesSizer) from the Spring adapter
into the framework-neutral bootui-engine, using the proven live-policy template.

- Add MemoryRuntimeConfig SPI: two semantic questions (virtualThreadsEnabled,
  kubernetesHealthProbesEnabled) plus neutral DEFAULTS, replacing the provider's
  only Spring tie (Environment).
- Add SpringMemoryRuntimeConfig adapter reading spring.threads.virtual.enabled
  and the management.endpoint.health.* chain live, so runtime overrides are
  honored; null Environment falls back to DEFAULTS.
- Wire via @Lazy @ConditionalOnMissingBean factory in BootUiEngineConfiguration;
  the request-param override for Kubernetes probes still wins over config.
- Collapse LiveMemoryController/JvmTuningController to a single engine-bean
  constructor.
- Convert ContainerMemoryLimitDetector logging from slf4j to JDK System.Logger
  to keep the engine free of non-java.* dependencies (ArchUnit boundary).
- Move pure unit tests into the engine (MemoryReportProviderTests,
  MemoryCalculatorTests, MemoryKubernetesSizerTests); rewrite
  LiveMemoryControllerTests thin (mocks the engine service); add
  SpringMemoryRuntimeConfigTests pinning the env mapping.

Engine + autoconfigure build green (1193 autoconfigure tests), Spring API
conformance 3/3 unchanged, spotless clean.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>